SVM: skipping changes 20678-20679 for svn://svn.forge.objectweb.org/svnroot/exoplatform/projects